--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "typical": "^7.1.1",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "node": "14.17.5"
+  },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
